--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -31,7 +31,7 @@
     justify-self: start;
     cursor: pointer;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 3rem;
     display: flex;
     align-items: center;
     
@@ -66,6 +66,7 @@
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 100%;
+    cursor: pointer;
   }
   
   .fa-bars {
