--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,5 +1,5 @@
 .home__hero-section {
-    color: #fff;
+    color: rgb(0, 0, 0);
     padding: 160px 0;
   }
 
@@ -46,15 +46,15 @@
     font-size: 48px;
     line-height: 1.1;
     font-weight: 600;
-    color: #f7f8fa;
+    color: #000000;
   }
   
   .dark {
-    color: #1c2237;
+    color: #000000;
   }
   
   .darkBg {
-    background-color: #1c2237;
+    background-color: #ffffff;
   }
   
   .home__hero-subtitle {
