--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: #1c2237;
+    background: #fa0000be;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -55,7 +55,7 @@
   }
   
   .nav-item:hover {
-    border-bottom: 2px solid #f00946;
+    border-bottom: 2px solid #000000;
   }
   
   .nav-links {
